Fixed image glitch on smaller screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,11 @@ body{
   background-repeat: no-repeat;
   background-position: left top;
 }
+@media only screen and (max-width: 1200px) {
+  #hide {
+    display: none;
+  }
+}
 
 #Test{
   height:10px;
